--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 </head>
 <body>
   <nav class="navbar">
-    <h1 class="title white">Development Tools</h1>
+    <img src="./assets/wolox_logo.svg" alt="wolox" class="logo" />
+    <h1 class="title">Developer Tools</h1>
   </nav>
   <div class="main-container">
     <div class="platform">
-      <h1 class="title">Front-End Tools</h1>
+      <h1 class="platform-title">Front-End Tools</h1>
       <div class="tools">
         <div class="tech">
-          <img src="./assets/react_icon.png" alt="react" class="logo" />
+          <img src="./assets/react_icon.svg" alt="react" class="logo" />
           <h1 class="title">ReactJS</h1>
           <span class="release" >Release: 2013</span>
           <p class="description">
@@ -24,7 +25,7 @@
           </p>
         </div>
         <div class="tech">
-          <img src="./assets/angular_icon.png" alt="angular" class="logo" />
+          <img src="./assets/angular_icon.svg" alt="angular" class="logo" />
           <h1 class="title">AngularJS</h1>
           <span class="release" >Release: 2010</span>
           <p class="description">
@@ -32,7 +33,7 @@
           </p>
         </div>
         <div class="tech">
-          <img src="./assets/vue_icon.png" alt="vue" class="logo" />
+          <img src="./assets/vue_icon.svg" alt="vue" class="logo" />
           <h1 class="title">VueJS</h1>
           <span class="release" >Release: 2014</span>
           <p class="description">
@@ -40,27 +41,20 @@
           </p>
         </div>
         <div class="tech">
-          <img src="./assets/elm_icon.png" alt="elm" class="logo" />
+          <img src="./assets/elm_icon.svg" alt="elm" class="logo" />
           <h1 class="title">Elm</h1>
           <span class="release" >Release: 2016</span>
           <p class="description">
             Elm is a domain-specific functional programming language for declaratively creating web browser-based graphical user interfaces.
           </p>
         </div>
-        <div class="tech">
-          <img src="./assets/polymer_logo.png" alt="polymer" class="logo" />
-          <h1 class="title">Polymer</h1>
-          <span class="release" >Release: 2015</span>
-          <p class="description">
-            Polymer is an open-source JavaScript library for building web applications using Web Components.
-          </p>
-        </div>
       </div>
     </div>
     <div class="platform">
-      <h1 class="title">Back-End Tools</h1>
+      <h1 class="platform-title">Back-End Tools</h1>
       <div class="tools">
         <div class="tech">
+            <img src="./assets/rails_icon.png" alt="rails" class="logo" />
           <h1 class="title">Ruby on Rails</h1>
           <span class="release">Release: 2005</span>
           <p class="description">
@@ -68,6 +62,7 @@
           </p>
         </div>
         <div class="tech">
+          <img src="./assets/express_icon.svg" alt="express" class="logo" />
           <h1 class="title">NodeJS</h1>
           <span class="release">Release: 2009</span>
           <p class="description">
@@ -75,6 +70,7 @@
           </p>
         </div>
         <div class="tech">
+          <img src="./assets/aspnet_icon.png" alt="aspnet" class="logo" />
           <h1 class="title">ASP.NET Core</h1>
           <span class="release">Release: 2016</span>
           <p class="description">
@@ -85,7 +81,16 @@
     </div>
   </div>
   <div class="footer">
-    <h1 class="title white">WOLOX</h1>
+    <form class="contact-form">
+      <label class="label">Contact us!</label>
+      <input type="email" class="input-email" />
+      <button type="button" class="send">SEND</button>
+    </form>
+    <div class="copyright">
+      <p class="copyright-text">
+        Copyright 2017. WOLOX. All rights reserved.
+      </p>
+    </div>
   </div>
 </body>
 </html>
