replaced flex-box with css-grid for new layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="platform">
       <h1 class="platform-title">Front-End Tools</h1>
       <div class="tools">
-        <div class="tech">
+        <div class="tech first">
           <img src="./assets/react_icon.svg" alt="react" class="logo" />
           <h1 class="title">ReactJS</h1>
           <span class="release" >Release: 2013</span>
@@ -49,12 +49,20 @@
             Elm is a domain-specific functional programming language for declaratively creating web browser-based graphical user interfaces.
           </p>
         </div>
+        <div class="tech">
+          <img src="./assets/polymer_icon.svg" alt="polymer" class="logo" />
+          <h1 class="title">Polymer</h1>
+          <span class="release" >Release: 2015</span>
+          <p class="description">
+            Polymer is an open-source JavaScript library for building web applications using Web Components.
+          </p>
+        </div>
       </div>
     </div>
     <div class="platform">
       <h1 class="platform-title">Back-End Tools</h1>
       <div class="tools">
-        <div class="tech">
+        <div class="tech first">
             <img src="./assets/rails_icon.png" alt="rails" class="logo" />
           <h1 class="title">Ruby on Rails</h1>
           <span class="release">Release: 2005</span>
@@ -76,6 +84,14 @@
           <span class="release">Release: 2016</span>
           <p class="description">
             ASP.NET Core is the next generation of ASP.NET. It is a modular framework that runs on both the full .NET Framework, on Windows, and the cross-platform .NET Core.
+          </p>
+        </div>
+        <div class="tech">
+          <img src="./assets/django_icon.svg" alt="django" class="logo" />
+          <h1 class="title">Django</h1>
+          <span class="release">Release: 2005</span>
+          <p class="description">
+            Django (/ˈdʒæŋɡoʊ/ JANG-goh) is a free and open-source web framework, written in Python, which follows the model-view-template (MVT) architectural pattern.
           </p>
         </div>
       </div>
